tests/negative/semantic/wrong_arg_count_execstatus/input.ci
void main() {
    print(toString(execStatus()) + "\n");
}
